# India-em-lbo-research

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
data/raw/: india_buyout_deals_template.csv  regulatory_timeline_template.csv
docs/: assumptions_log.md  data_dictionary.md  literature_review_tracker.md  replication_plan.md  research_design.md
models/: india_adapted_lbo_model_v4.py
notebooks/: README.md
paper/: evidence_addendum_v3.md  working_paper_draft.md  working_paper_outline.md
src/india_em_lbo/: __init__.py  data_cleaning.py  lbo_metrics.py  regulatory_scoring.py  visualization.py
tests/: test_lbo_metrics.py  test_regulatory_scoring.py
