[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "india-em-lbo-research"
version = "0.1.0"
description = "Research repository for emerging-market LBOs with India as the core case study"
authors = [
  {name = "Hitesh Dabi"},
  {name = "Himanshu Dabi"}
]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "openpyxl>=3.1.0",
  "scikit-learn>=1.4.0",
  "statsmodels>=0.14.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
